swupdate-boards: removed sumodule, added fdolinuxclient.service

--- a/meta-lx-fdo/conf/layer.conf
+++ b/meta-lx-fdo/conf/layer.conf
@@ -10,5 +10,5 @@ BBFILE_COLLECTIONS += "meta-lx-fdo"
 BBFILE_PATTERN_meta-lx-fdo = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-lx-fdo = "8"
 
-LAYERDEPENDS_meta-lx-fdo = "core swupdate swupdate-boards"
+LAYERDEPENDS_meta-lx-fdo = "core swupdate"
 LAYERSERIES_COMPAT_meta-lx-fdo = "warrior dunfell zeus kirkstone"
